# rec-system

./: .editorconfig  .gitignore  .prettierrc  clean_data.csv  customer_service_data.ipynb  docker-compose.yml  models.py  package-lock.json  package.json  pyproject.toml  rec_system.ipynb  requirements.txt  ruff.toml  svelte.config.js  tailwind.config.js
app/: main.py
app/api/: dependencies.py  main.py
app/api/routes/: chats.py  feedbacks.py  issues.py  users.py
app/db/: chats.py  feedbacks.py  issues.py  main.py  models.py  pool.py  users.py
app/internal/: hash.py  html.py  redis.py  session.py  ws.py
app/models/: chats.py  crud.py  feedbacks.py  issues.py  users.py
migrations/: 000001_create_users_table.up.sql  000002_create_operators_table.down.sql  000002_create_operators_table.up.sql  000003_create_issues_table.up.sql  000004_create_chats_table.up.sql  000005_create_chat_messages_table.up.sql  000006_create_feedback_table.up.sql  000007_add_on_delete_cascade_to_feedbacks_fkey.down.sql  000007_add_on_delete_cascade_to_feedbacks_fkey.up.sql  000008_add_on_delete_cascade_to_chats_fkey.down.sql  000008_add_on_delete_cascade_to_chats_fkey.up.sql  000009_add_on_delete_cascade_to_chat_messages_fkey.down.sql  000009_add_on_delete_cascade_to_chat_messages_fkey.up.sql
nn/: llama.py  main.py  models.py
notebooks/: customer_service_data.ipynb  rec_system.ipynb
scripts/: gen_db_data.py  start-dev.sh  ui-dev.sh
ui/: .prettierignore  .prettierrc  package-lock.json  package.json  svelte.config.js  tailwind.config.js
ui/src/: app.css  app.html
ui/src/lib/: ws.ts  (+8 more)
(+61 files in other folders)
