[tool.poetry]
name = "rec-system"
version = "0.1.0"
description = "Recommendation system for recommending customer service operators based on the client ticket."
authors = ["Lex Miin <alexmiyin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
tensorflow = "2.15.0"
tensorflow-metal = { version = "1.1.0", platform = "darwin" }
tensorflow-macos = { version = "2.15.0", platform = "darwin" }
tensorflow-recommenders = "0.7.3"
fastapi = { extras = ["all"], version = "^0.110.2" }
redis = "^5.0.4"
asyncpg = "^0.29.0"
pandas = "^2.2.2"
tensorflow-datasets = "4.9.4"
passlib = "1.7.4"
numpy = "^1.26.4"
scikit-learn = "1.3.2"
faker = "^24.14.0"
tensorflow-ranking = "0.5.3"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pandas-stubs = "^2.2.1.240316"
types-tensorflow = "^2.16.0.20240424"
ipykernel = "^6.29.4"
asyncpg-stubs = "^0.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
extend-select = ["UP019", "I001"]
ignore = ["E741", "E203"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true

[[tool.mypy.overrides]]
module = "tensorflow_recommenders.*"
ignore_missing_imports = true
